--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -267,3 +267,23 @@ title = {Rendering Techniques for Hardware-Accelerated Image-Based CSG.}
 }
 
 @misc{csg-xrt-renderer, title={XRT Renderer}, url={http://xrt.wikidot.com/doc:csg}, journal={CSG - XRT Renderer}}
+
+@inproceedings{hidden-surface-problem,
+author = {Newell, M. E. and Newell, R. G. and Sancha, T. L.},
+title = {A Solution to the Hidden Surface Problem},
+year = {1972},
+isbn = {9781450374910},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/800193.569954},
+doi = {10.1145/800193.569954},
+abstract = {A method for producing half-tone pictures by computer is presented. The basic method, which is very simple, works well in most cases, but does not handle all objects correctly. The extended method, which copes with all cases, is also described. The functions used for calculating the intensity of parts of objects, and the method for handling transparency, are discussed. Examples of pictures produced by this method are included, and the times taken to generate them are tabulated. The extended algorithm compares favourably in speed and storage requirements with other published algorithms.},
+booktitle = {Proceedings of the ACM Annual Conference - Volume 1},
+pages = {443–450},
+numpages = {8},
+keywords = {greyscale, half-tone, curved surfaces, graphics, video-disc, computer art, visible-surface, computer-aided design, hidden-line, hidden-surface, raster scan, shading},
+location = {Boston, Massachusetts, USA},
+series = {ACM '72}
+}
+
+@misc{rasterization_scratch_pixel, title={Rasterization: a Practical Implementation}, url={https://www.scratchapixel.com/lessons/3d-basic-rendering/rasterization-practical-implementation}, journal={Scratchapixel}, author={Scratchapixel}, year={2015}, month={Jan}}
