--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,289 +1,335 @@
 @misc{steuer_2012,
-    title =     {Methods for Polygonalization of a Constructive Solid Geometry Description in Web-based Rendering Environments},
-    url =   {https://www.en.pms.ifi.lmu.de/publications/diplomarbeiten/Sebastian.Steuer/DA_Sebastian.Steuer.pdf},
-    journal =   {Ludwig Maximilian University of Munich}, author={Steuer, Sebastian}, year={2012}, month={12}
-    } 
-    
+	title        = {Methods for Polygonalization of a Constructive Solid Geometry Description in Web-based Rendering Environments},
+	author       = {Steuer, Sebastian},
+	year         = 2012,
+	month        = 12,
+	journal      = {Ludwig Maximilian University of Munich},
+	url          = {https://www.en.pms.ifi.lmu.de/publications/diplomarbeiten/Sebastian.Steuer/DA_Sebastian.Steuer.pdf}
+}
 @misc{SOLIDREP_1,
-    title = {Geographic Information Systems},
-    editor = {Hossein Bidgoli},
-    booktitle = {Encyclopedia of Information Systems},
-    publisher = {Elsevier},
-    address = {New York},
-    pages = {421-432},
-    year = {2003},
-    isbn = {978-0-12-227240-0},
-    doi = {https://doi.org/10.1016/B0-12-227240-4/00077-0},
-    url = {https://www.sciencedirect.com/science/article/pii/B0122272404000770},
-    author = {Peter Keenan}
+	title        = {Geographic Information Systems},
+	author       = {Peter Keenan},
+	year         = 2003,
+	booktitle    = {Encyclopedia of Information Systems},
+	publisher    = {Elsevier},
+	address      = {New York},
+	pages        = {421--432},
+	doi          = {https://doi.org/10.1016/B0-12-227240-4/00077-0},
+	isbn         = {978-0-12-227240-0},
+	url          = {https://www.sciencedirect.com/science/article/pii/B0122272404000770},
+	editor       = {Hossein Bidgoli}
 }
-    
 @misc{SOLIDREP_2,
-    title = {CHAPTER 7 - Curves and Surfaces: Topology},
-    editor = {Reinhard Klette and Azriel Rosenfeld},
-    booktitle = {Digital Geometry},
-    publisher = {Morgan Kaufmann},
-    address = {San Francisco},
-    pages = {231-268},
-    year = {2004},
-    series = {The Morgan Kaufmann Series in Computer Graphics},
-    isbn = {978-1-55860-861-0},
-    doi = {https://doi.org/10.1016/B978-155860861-0/50009-2},
-    url = {https://www.sciencedirect.com/science/article/pii/B9781558608610500092},
-    author = {Reinhard Klette and Azriel Rosenfeld}
+	title        = {CHAPTER 7 - Curves and Surfaces: Topology},
+	author       = {Reinhard Klette and Azriel Rosenfeld},
+	year         = 2004,
+	booktitle    = {Digital Geometry},
+	publisher    = {Morgan Kaufmann},
+	address      = {San Francisco},
+	series       = {The Morgan Kaufmann Series in Computer Graphics},
+	pages        = {231--268},
+	doi          = {https://doi.org/10.1016/B978-155860861-0/50009-2},
+	isbn         = {978-1-55860-861-0},
+	url          = {https://www.sciencedirect.com/science/article/pii/B9781558608610500092},
+	editor       = {Reinhard Klette and Azriel Rosenfeld}
 }
-    
 @misc{SOLIDREP_3,
-    title = {6 - Object shape representation via skeletal models (s-reps) and statistical analysis},
-    editor = {Xavier Pennec and Stefan Sommer and Tom Fletcher},
-    booktitle = {Riemannian Geometric Statistics in Medical Image Analysis},
-    publisher = {Academic Press},
-    pages = {233-271},
-    year = {2020},
-    isbn = {978-0-12-814725-2},
-    doi = {https://doi.org/10.1016/B978-0-12-814725-2.00014-5},
-    url = {https://www.sciencedirect.com/science/article/pii/B9780128147252000145},
-    author = {Stephen M. Pizer and Junpyo Hong and Jared Vicory and Zhiyuan Liu and J.S. Marron and Hyo-young Choi and James Damon and Sungkyu Jung and Beatriz Paniagua and Jörn Schulz and Ankur Sharma and Liyun Tu and Jiyao Wang}
+	title        = {6 - Object shape representation via skeletal models (s-reps) and statistical analysis},
+	author       = {Stephen M. Pizer and Junpyo Hong and Jared Vicory and Zhiyuan Liu and J.S. Marron and Hyo-young Choi and James Damon and Sungkyu Jung and Beatriz Paniagua and Jörn Schulz and Ankur Sharma and Liyun Tu and Jiyao Wang},
+	year         = 2020,
+	booktitle    = {Riemannian Geometric Statistics in Medical Image Analysis},
+	publisher    = {Academic Press},
+	pages        = {233--271},
+	doi          = {https://doi.org/10.1016/B978-0-12-814725-2.00014-5},
+	isbn         = {978-0-12-814725-2},
+	url          = {https://www.sciencedirect.com/science/article/pii/B9780128147252000145},
+	editor       = {Xavier Pennec and Stefan Sommer and Tom Fletcher}
 }
-    
 @misc{SOLIDREP_4,
-    title = {Modeling Techniques and Control Architectures for Machining Intelligence},
-    editor = {C.T. Leondes},
-    series = {Control and Dynamic Systems},
-    publisher = {Academic Press},
-    volume = {70},
-    pages = {243-289},
-    year = {1995},
-    booktitle = {Digital Control Systems Implementation Techniques},
-    issn = {0090-5267},
-    doi = {https://doi.org/10.1016/S0090-5267(06)80031-9},
-    url = {https://www.sciencedirect.com/science/article/pii/S0090526706800319},
-    author = {Allan D. Spence and Yusuf Altintas}
+	title        = {Modeling Techniques and Control Architectures for Machining Intelligence},
+	author       = {Allan D. Spence and Yusuf Altintas},
+	year         = 1995,
+	booktitle    = {Digital Control Systems Implementation Techniques},
+	publisher    = {Academic Press},
+	series       = {Control and Dynamic Systems},
+	volume       = 70,
+	pages        = {243--289},
+	doi          = {https://doi.org/10.1016/S0090-5267(06)80031-9},
+	issn         = {0090-5267},
+	url          = {https://www.sciencedirect.com/science/article/pii/S0090526706800319},
+	editor       = {C.T. Leondes}
 }
-    
 @misc{SOLIDREP_5,
-    title = {Chapter 3 - Solid Modeling},
-    editor = {Kuang-Hua Chang},
-    booktitle = {e-Design},
-    publisher = {Academic Press},
-    address = {Boston},
-    pages = {125-167},
-    year = {2015},
-    isbn = {978-0-12-382038-9},
-    doi = {https://doi.org/10.1016/B978-0-12-382038-9.00003-X},
-    url = {https://www.sciencedirect.com/science/article/pii/B978012382038900003X},
-    author = {Kuang-Hua Chang}
+	title        = {Chapter 3 - Solid Modeling},
+	author       = {Kuang-Hua Chang},
+	year         = 2015,
+	booktitle    = {e-Design},
+	publisher    = {Academic Press},
+	address      = {Boston},
+	pages        = {125--167},
+	doi          = {https://doi.org/10.1016/B978-0-12-382038-9.00003-X},
+	isbn         = {978-0-12-382038-9},
+	url          = {https://www.sciencedirect.com/science/article/pii/B978012382038900003X},
+	editor       = {Kuang-Hua Chang}
 }
-
-    
-@book{wikipedia_2021_mesh_rep, title={Visualization of a polygon mesh}, url={https://en.wikipedia.org/wiki/Polygon_mesh}, journal={Wikipedia}, year={2021}, month={1}}
-
+@book{wikipedia_2021_mesh_rep,
+	title        = {Visualization of a polygon mesh},
+	year         = 2021,
+	month        = 1,
+	journal      = {Wikipedia},
+	url          = {https://en.wikipedia.org/wiki/Polygon_mesh}
+}
 @article{COMPUTING_SURVEYS,
-author = {Requicha, Aristides G.},
-title = {Representations for Rigid Solids: Theory, Methods, and Systems},
-year = {1980},
-issue_date = {Dec. 1980},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-volume = {12},
-number = {4},
-issn = {0360-0300},
-url = {https://doi.org/10.1145/356827.356833},
-doi = {10.1145/356827.356833},
-journal = {ACM Comput. Surv.},
-month = dec,
-pages = {437–464},
-numpages = {28}
+	title        = {Representations for Rigid Solids: Theory, Methods, and Systems},
+	author       = {Requicha, Aristides G.},
+	year         = 1980,
+	month        = dec,
+	journal      = {ACM Comput. Surv.},
+	publisher    = {Association for Computing Machinery},
+	address      = {New York, NY, USA},
+	volume       = 12,
+	number       = 4,
+	pages        = {437–464},
+	doi          = {10.1145/356827.356833},
+	issn         = {0360-0300},
+	url          = {https://doi.org/10.1145/356827.356833},
+	issue_date   = {Dec. 1980},
+	numpages     = 28
 }
-
 @inproceedings{INITIAL_RENDERING,
-author = {Appel, Arthur},
-title = {Some Techniques for Shading Machine Renderings of Solids},
-year = {1968},
-isbn = {9781450378970},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/1468075.1468082},
-doi = {10.1145/1468075.1468082},
-booktitle = {Proceedings of the April 30--May 2, 1968, Spring Joint Computer Conference},
-pages = {37–45},
-numpages = {9},
-location = {Atlantic City, New Jersey},
-series = {AFIPS '68 (Spring)}
+	title        = {Some Techniques for Shading Machine Renderings of Solids},
+	author       = {Appel, Arthur},
+	year         = 1968,
+	booktitle    = {Proceedings of the April 30--May 2, 1968, Spring Joint Computer Conference},
+	location     = {Atlantic City, New Jersey},
+	publisher    = {Association for Computing Machinery},
+	address      = {New York, NY, USA},
+	series       = {AFIPS '68 (Spring)},
+	pages        = {37–45},
+	doi          = {10.1145/1468075.1468082},
+	isbn         = 9781450378970,
+	url          = {https://doi.org/10.1145/1468075.1468082},
+	numpages     = 9
 }
-
 @inbook{visibilty_algorithms,
-author = {Núñez, Angel and Lacasa, Lucas and Gomez, Jose and Luque, Bartolo},
-year = {2012},
-month = {03},
-pages = {},
-title = {Visibility Algorithms: A Short Review},
-isbn = {978-953-51-0115-4},
-journal = {New Frontiers in Graph Theory},
-doi = {10.5772/34810}
+	title        = {Visibility Algorithms: A Short Review},
+	author       = {Núñez, Angel and Lacasa, Lucas and Gomez, Jose and Luque, Bartolo},
+	year         = 2012,
+	month        = {03},
+	journal      = {New Frontiers in Graph Theory},
+	pages        = {},
+	doi          = {10.5772/34810},
+	isbn         = {978-953-51-0115-4}
 }
-
 @inproceedings{RT_RT1,
-author = {Aila, Timo and Laine, Samuli},
-title = {Understanding the Efficiency of Ray Traversal on GPUs},
-year = {2009},
-isbn = {9781605586038},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/1572769.1572792},
-doi = {10.1145/1572769.1572792},
-booktitle = {Proceedings of the Conference on High Performance Graphics 2009},
-pages = {145–149},
-numpages = {5},
-keywords = {SIMD, ray tracing, SIMT},
-location = {New Orleans, Louisiana},
-series = {HPG '09}
+	title        = {Understanding the Efficiency of Ray Traversal on GPUs},
+	author       = {Aila, Timo and Laine, Samuli},
+	year         = 2009,
+	booktitle    = {Proceedings of the Conference on High Performance Graphics 2009},
+	location     = {New Orleans, Louisiana},
+	publisher    = {Association for Computing Machinery},
+	address      = {New York, NY, USA},
+	series       = {HPG '09},
+	pages        = {145–149},
+	doi          = {10.1145/1572769.1572792},
+	isbn         = 9781605586038,
+	url          = {https://doi.org/10.1145/1572769.1572792},
+	numpages     = 5,
+	keywords     = {SIMD, ray tracing, SIMT}
 }
-
-
 @book{RT_RT2,
-author = {Akenine-Mller, Tomas and Haines, Eric and Hoffman, Naty},
-title = {Real-Time Rendering, Fourth Edition},
-year = {2018},
-isbn = {0134997832},
-publisher = {A. K. Peters, Ltd.},
-address = {USA},
-edition = {4th}
+	title        = {Real-Time Rendering, Fourth Edition},
+	author       = {Akenine-Mller, Tomas and Haines, Eric and Hoffman, Naty},
+	year         = 2018,
+	publisher    = {A. K. Peters, Ltd.},
+	address      = {USA},
+	isbn         = {0134997832},
+	edition      = {4th}
 }
-
 @article{ROTH1982109,
-title = {Ray casting for modeling solids},
-journal = {Computer Graphics and Image Processing},
-volume = {18},
-number = {2},
-pages = {109-144},
-year = {1982},
-issn = {0146-664X},
-doi = {https://doi.org/10.1016/0146-664X(82)90169-1},
-url = {https://www.sciencedirect.com/science/article/pii/0146664X82901691},
-author = {Scott D Roth}
+	title        = {Ray casting for modeling solids},
+	author       = {Scott D Roth},
+	year         = 1982,
+	journal      = {Computer Graphics and Image Processing},
+	volume       = 18,
+	number       = 2,
+	pages        = {109--144},
+	doi          = {https://doi.org/10.1016/0146-664X(82)90169-1},
+	issn         = {0146-664X},
+	url          = {https://www.sciencedirect.com/science/article/pii/0146664X82901691}
 }
-
-@ARTICLE{GEOMETRIC_MODELING_1977,
-  author={H. B. {Voelcker} and A. A. G. {Requicha}},
-  journal={Computer}, 
-  title={Geometric Modeling of Mechanical Parts and Processes}, 
-  year={1977},
-  volume={10},
-  number={12},
-  pages={48-57},
-  doi={10.1109/C-M.1977.217601}
-  }
-  
+@article{GEOMETRIC_MODELING_1977,
+	title        = {Geometric Modeling of Mechanical Parts and Processes},
+	author       = {H. B. {Voelcker} and A. A. G. {Requicha}},
+	year         = 1977,
+	journal      = {Computer},
+	volume       = 10,
+	number       = 12,
+	pages        = {48--57},
+	doi          = {10.1109/C-M.1977.217601}
+}
 @inproceedings{Requicha1978MathematicalFO,
-  title={Mathematical Foundations of Constructive Solid Geometry: General Topology of Closed Regular Sets},
-  author={A. Requicha and R. Tilove},
-  year={1978}
+	title        = {Mathematical Foundations of Constructive Solid Geometry: General Topology of Closed Regular Sets},
+	author       = {A. Requicha and R. Tilove},
+	year         = 1978
 }
-  
-  @inproceedings{Laidlaw:1986:CSG,
-    author = "David H. Laidlaw and W. Benjamin Trumbore and John    F. Hughes",
-    title = "Constructive Solid Geometry for Polyhedral Objects",
-    year = "1986",
-    month = aug,
-    booktitle = "Computer Graphics (Proceedings of SIGGRAPH 86)",   
-    volume = "20",
-    number = "4",
-    pages = "161--170",
+@inproceedings{Laidlaw:1986:CSG,
+	title        = {Constructive Solid Geometry for Polyhedral Objects},
+	author       = {David H. Laidlaw and W. Benjamin Trumbore and John    F. Hughes},
+	year         = 1986,
+	month        = aug,
+	booktitle    = {Computer Graphics (Proceedings of SIGGRAPH 86)},
+	volume       = 20,
+	number       = 4,
+	pages        = {161--170}
 }
-
-
 @misc{kensler_ray_2006,
-	title = {Ray {Tracing} {CSG} {Objects} {Using} {Single} {Hit} {Intersections}},
-	url = {http://xrt.wdfiles.com/local--files/doc\%3Acsg/CSG.pdf},
-	language = {English},
-	author = {Kensler, Andrew},
-	month = oct,
-	year = {2006},
+	title        = {Ray {Tracing} {CSG} {Objects} {Using} {Single} {Hit} {Intersections}},
+	author       = {Kensler, Andrew},
+	year         = 2006,
+	month        = oct,
+	url          = {http://xrt.wdfiles.com/local--files/doc\%3Acsg/CSG.pdf},
+	language     = {English}
 }
-
 @inproceedings{lefebvre:hal-00926861,
-  TITLE = {{IceSL: A GPU Accelerated CSG Modeler and Slicer}},
-  AUTHOR = {Lefebvre, Sylvain},
-  URL = {https://hal.inria.fr/hal-00926861},
-  BOOKTITLE = {{AEFA'13, 18th European Forum on Additive Manufacturing}},
-  ADDRESS = {Paris, France},
-  YEAR = {2013},
-  MONTH = Jun,
-  HAL_ID = {hal-00926861},
-  HAL_VERSION = {v1},
+	title        = {{IceSL: A GPU Accelerated CSG Modeler and Slicer}},
+	author       = {Lefebvre, Sylvain},
+	year         = 2013,
+	month        = jun,
+	booktitle    = {{AEFA'13, 18th European Forum on Additive Manufacturing}},
+	address      = {Paris, France},
+	url          = {https://hal.inria.fr/hal-00926861},
+	hal_id       = {hal-00926861},
+	hal_version  = {v1}
 }
-
-@ARTICLE{bounding_algorithms,
-  author={S. {Cameron}},
-  journal={IEEE Computer Graphics and Applications}, 
-  title={Efficient bounds in constructive solid geometry}, 
-  year={1991},
-  volume={11},
-  number={3},
-  pages={68-74},
-  doi={10.1109/38.79455}
-  }
-  
+@article{bounding_algorithms,
+	title        = {Efficient bounds in constructive solid geometry},
+	author       = {S. {Cameron}},
+	year         = 1991,
+	journal      = {IEEE Computer Graphics and Applications},
+	volume       = 11,
+	number       = 3,
+	pages        = {68--74},
+	doi          = {10.1109/38.79455}
+}
 @inproceedings{hardware_accelerated_image_based_csg.,
-author = {Kirsch, Florian and Döllner, Jürgen},
-year = {2004},
-month = {01},
-pages = {221-228},
-title = {Rendering Techniques for Hardware-Accelerated Image-Based CSG.}
+	title        = {Rendering Techniques for Hardware-Accelerated Image-Based CSG.},
+	author       = {Kirsch, Florian and Döllner, Jürgen},
+	year         = 2004,
+	month        = {01},
+	pages        = {221--228}
 }
- 
-@InProceedings{NSAG_OPTIM,
-    author="Hamza, Karim
-    and Saitou, Kazuhiro",
-    editor="Deb, Kalyanmoy",
-    title="Optimization of Constructive Solid Geometry Via a Tree-Based     Multi-objective Genetic Algorithm",
-    booktitle="Genetic and Evolutionary Computation -- GECCO 2004",
-    year="2004",
-    publisher="Springer Berlin Heidelberg",
-    address="Berlin, Heidelberg",
-    pages="981--992",
-    isbn="978-3-540-24855-2"
+@inproceedings{NSAG_OPTIM,
+	title        = {Optimization of Constructive Solid Geometry Via a Tree-Based     Multi-objective Genetic Algorithm},
+	author       = {Hamza, Karim and Saitou, Kazuhiro},
+	year         = 2004,
+	booktitle    = {Genetic and Evolutionary Computation -- GECCO 2004},
+	publisher    = {Springer Berlin Heidelberg},
+	address      = {Berlin, Heidelberg},
+	pages        = {981--992},
+	isbn         = {978-3-540-24855-2},
+	editor       = {Deb, Kalyanmoy}
 }
-
 @thesis{tilove1977a,
-  author = {Tilove, R.B.},
-  date = {1977},
-  title = {A study of GEOMETRIC SET-MEMBERSHIP CLASSIFICATION},
-  source = {Thesis (M.S.),},
-  language = {en},
-  school = {University of Rochester},
-  type = {(Master's thesis,}
+	title        = {A study of GEOMETRIC SET-MEMBERSHIP CLASSIFICATION},
+	author       = {Tilove, R.B.},
+	date         = 1977,
+	source       = {Thesis (M.S.),},
+	language     = {en},
+	school       = {University of Rochester},
+	type         = {(Master's thesis,}
 }
-
-@book{lachlan_srebrny_zarach_1977, place={Berlin}, title={Set theory and hierarchy theory V: Bierutowice, Poland, 1976}, publisher={Springer-Verlag}, author={Lachlan, Alistair H. and Srebrny, Marian and Zarach, Andrzej}, year={1977}}
-
-@book{mansfield_1987, title={Introduction to topology}, publisher={R.E. Krieger}, author={Mansfield, Maynard J.}, year={1987}}
-
+@book{lachlan_srebrny_zarach_1977,
+	title        = {Set theory and hierarchy theory V: Bierutowice, Poland, 1976},
+	author       = {Lachlan, Alistair H. and Srebrny, Marian and Zarach, Andrzej},
+	year         = 1977,
+	publisher    = {Springer-Verlag},
+	place        = {Berlin}
+}
+@book{mansfield_1987,
+	title        = {Introduction to topology},
+	author       = {Mansfield, Maynard J.},
+	year         = 1987,
+	publisher    = {R.E. Krieger}
+}
 @misc{ray_primitive_intersections,
-	title = {Ray tracing primitives},
-	url = {https://www.cl.cam.ac.uk/teaching/1999/AGraphHCI/SMAG/node2.html},
-	urldate = {2021-04-05},
+	title        = {Ray tracing primitives},
+	url          = {https://www.cl.cam.ac.uk/teaching/1999/AGraphHCI/SMAG/node2.html},
+	urldate      = {2021-04-05}
 }
-
-@misc{csg-xrt-renderer, title={XRT Renderer}, url={http://xrt.wikidot.com/doc:csg}, journal={CSG - XRT Renderer}}
-
+@misc{csg-xrt-renderer,
+	title        = {XRT Renderer},
+	journal      = {CSG - XRT Renderer},
+	url          = {http://xrt.wikidot.com/doc:csg}
+}
 @inproceedings{hidden-surface-problem,
-author = {Newell, M. E. and Newell, R. G. and Sancha, T. L.},
-title = {A Solution to the Hidden Surface Problem},
-year = {1972},
-isbn = {9781450374910},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/800193.569954},
-doi = {10.1145/800193.569954},
-abstract = {A method for producing half-tone pictures by computer is presented. The basic method, which is very simple, works well in most cases, but does not handle all objects correctly. The extended method, which copes with all cases, is also described. The functions used for calculating the intensity of parts of objects, and the method for handling transparency, are discussed. Examples of pictures produced by this method are included, and the times taken to generate them are tabulated. The extended algorithm compares favourably in speed and storage requirements with other published algorithms.},
-booktitle = {Proceedings of the ACM Annual Conference - Volume 1},
-pages = {443–450},
-numpages = {8},
-keywords = {greyscale, half-tone, curved surfaces, graphics, video-disc, computer art, visible-surface, computer-aided design, hidden-line, hidden-surface, raster scan, shading},
-location = {Boston, Massachusetts, USA},
-series = {ACM '72}
+	title        = {A Solution to the Hidden Surface Problem},
+	author       = {Newell, M. E. and Newell, R. G. and Sancha, T. L.},
+	year         = 1972,
+	booktitle    = {Proceedings of the ACM Annual Conference - Volume 1},
+	location     = {Boston, Massachusetts, USA},
+	publisher    = {Association for Computing Machinery},
+	address      = {New York, NY, USA},
+	series       = {ACM '72},
+	pages        = {443–450},
+	doi          = {10.1145/800193.569954},
+	isbn         = 9781450374910,
+	url          = {https://doi.org/10.1145/800193.569954},
+	abstract     = {A method for producing half-tone pictures by computer is presented. The basic method, which is very simple, works well in most cases, but does not handle all objects correctly. The extended method, which copes with all cases, is also described. The functions used for calculating the intensity of parts of objects, and the method for handling transparency, are discussed. Examples of pictures produced by this method are included, and the times taken to generate them are tabulated. The extended algorithm compares favourably in speed and storage requirements with other published algorithms.},
+	numpages     = 8,
+	keywords     = {greyscale, half-tone, curved surfaces, graphics, video-disc, computer art, visible-surface, computer-aided design, hidden-line, hidden-surface, raster scan, shading}
 }
-
-@misc{rasterization_scratch_pixel, title={Rasterization: a Practical Implementation}, url={https://www.scratchapixel.com/lessons/3d-basic-rendering/rasterization-practical-implementation}, journal={Scratchapixel}, author={Scratchapixel}, year={2015}, month={Jan}}
+@misc{rasterization_scratch_pixel,
+	title        = {Rasterization: a Practical Implementation},
+	author       = {Scratchapixel},
+	year         = 2015,
+	month        = jan,
+	journal      = {Scratchapixel},
+	url          = {https://www.scratchapixel.com/lessons/3d-basic-rendering/rasterization-practical-implementation}
+}
+@article{fast_building_kd_trees,
+	title        = {On Building Fast kd-trees for Ray Tracing, and on Doing that in O(N log N)},
+	author       = {Wald, Ingo and Havran, Vlastimil},
+	year         = 2006,
+	month        = {09},
+	journal      = {Symposium on Interactive Ray Tracing},
+	volume       = {0},
+	pages        = {61--69},
+	doi          = {10.1109/RT.2006.280216},
+	isbn         = {1-4244-0693-5}
+}
+@inproceedings{ray_tracing_BSP,
+	title        = {Ray tracing with the BSP tree},
+	author       = {Ize, Thiago and Wald, Ingo and Parker, Steven},
+	year         = 2008,
+	month        = {09},
+	pages        = {159--166},
+	doi          = {10.1109/RT.2008.4634637},
+	isbn         = {978-1-4244-2741-3}
+}
+@article{parallel_kd_tree_construction,
+	title        = {Highly Parallel Fast KD-tree Construction for Interactive Ray Tracing of Dynamic Scenes},
+	author       = {Shevtsov, Maxim and Soupikov, Alexei and Kapustin, Alexander},
+	year         = 2007,
+	journal      = {Computer Graphics Forum},
+	volume       = 26,
+	number       = 3,
+	pages        = {395--404},
+	doi          = {https://doi.org/10.1111/j.1467-8659.2007.01062.x},
+	url          = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1467-8659.2007.01062.x},
+	keywords     = {I.3.7 Computer Graphics: Three-Dimensional Graphics and Realism: Ray tracing; Color; Shading; Shadowing and texture, I.3.1 Hardware Architecture: Parallel processing},
+	eprint       = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1467-8659.2007.01062.x}
+}
+@incollection{ray_tracing_BSP2,
+title = {VI.1 - RAY TRACING WITH THE BSP TREE},
+editor = {DAVID KIRK},
+booktitle = {Graphics Gems III (IBM Version)},
+publisher = {Morgan Kaufmann},
+address = {San Francisco},
+pages = {271-274},
+year = {1992},
+isbn = {978-0-12-409673-8},
+doi = {https://doi.org/10.1016/B978-0-08-050755-2.50061-0},
+url = {https://www.sciencedirect.com/science/article/pii/B9780080507552500610},
+author = {Kelvin Sung and Peter Shirley},
+}
